save middle process
