# ddd_app_server/schedules/urls.py
@@ -3,7 +3,7 @@ from . import views
 
 # prefix = "schedules/"
 urlpatterns = [
-    path("<uuid:schedule_id>/", views.ScheduleDetailView.as_view(), name="schedule-detail"),
-    path("<uuid:schedule_id>/attendances/", views.ScheduleAttendanceListView.as_view(), name="schedule-attendance-list"),
-    path("<uuid:schedule_id>/attendances/<uuid:member_id>/", views.AttendanceDetailView.as_view(), name="attendance-detail"),
+    # path("<uuid:schedule_id>/", views.ScheduleDetailView.as_view(), name="schedule-detail"),
+    # path("<uuid:schedule_id>/attendances/", views.ScheduleAttendanceListView.as_view(), name="schedule-attendance-list"),
+    # path("<uuid:schedule_id>/attendances/<uuid:member_id>/", views.AttendanceDetailView.as_view(), name="attendance-detail"),
 ]
